# SoulEvBatMonitor

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  error.rs  kia.rs  main.rs
src-tauri/src/elm327/: error.rs  mod.rs
src-tauri/src/elm327/transport/: history.rs  mod.rs  serial.rs  wifi.rs
src-tauri/src/kia/: command.rs  mod.rs
src-tauri/src/obd2/: error.rs  interface.rs  mod.rs  obd2_device.rs
src-tauri/src/obd2/commands/: implementation.rs  mod.rs  types.rs
src-tauri/src/obd2/device/: mod.rs
src-tauri/src/obd2/device/elm327/: mod.rs
src-tauri/src/obd2/device/elm327/transport/: history.rs  mod.rs  wifi.rs
src/components/: BatteryCells.tsx  CellInfo.tsx  CellsBlock.tsx  Chart.tsx  Connect.tsx
src/contexts/: AutomaticReconnect.ts  CarInfoHistory.tsx  Connection.tsx  SelectedCell.ts  SelectedHistoryElement.ts
src/models/: CarInfo.ts  ConnectionMethod.ts
src/utils/: wrapUseStateWithContext.tsx
src/utils/i18n/: en.json  index.ts  ua.json
